--- a/i18n/locales/fa.json
+++ b/i18n/locales/fa.json
@@ -2,6 +2,7 @@
   "$ Cost": "$ هزینه",
   ".not-draggable": ".not-draggable",
   "About": "درباره",
+  "Actions": "Actions",
   "Add New Role": "افزودن نقش جدید",
   "Add New User": "افزودن کاربر جدید",
   "Add Role": "افزودن نقش",
@@ -16,8 +17,10 @@
   "An unexpected error occurred. Please try again later.": "خطای غیرمنتظره‌ای رخ داد. لطفاً بعداً دوباره امتحان کنید.",
   "App Successfully installed": "برنامه با موفقیت نصب شد",
   "Apply and validate your database schema migrations to set up all required tables.": "مهاجرت‌های طرح پایگاه داده را اعمال و اعتبارسنجی کنید تا جداول مورد نیاز راه‌اندازی شوند.",
+  "Approve": "Approve",
   "At least one permission must be selected": "حداقل یک مجوز باید انتخاب شود",
   "At least one role must be selected": "حداقل یک نقش باید انتخاب شود",
+  "Author": "Author",
   "Author:": "نویسنده:",
   "Automatic migration failed.": "مهاجرت خودکار با شکست مواجه شد.",
   "Blockquote": "نقل قول",
@@ -27,9 +30,13 @@
   "Category:": "دسته‌بندی:",
   "Change Password": "تغییر رمز عبور",
   "Code": "کد",
+  "Comment": "Comment",
   "Comment must be at least 5 characters": "نظر باید حداقل ۵ کاراکتر باشد",
+  "Comment not found.": "Comment not found.",
   "Comment posted successfully": "نظر با موفقیت ارسال شد",
   "Comment posted successfully.": "نظر با موفقیت ارسال شد.",
+  "Comment status updated successfully": "Comment status updated successfully",
+  "Comment status updated successfully.": "Comment status updated successfully.",
   "Comments": "نظرات",
   "Confirm Password": "تأیید رمز عبور",
   "Confirm Password must be at least 6 characters": "رمز عبور تأیید شده باید حداقل ۶ کاراکتر باشد",
@@ -38,6 +45,7 @@
   "Content Toc": "فهرست محتوا",
   "Content saved successfully": "محتوا با موفقیت ذخیره شد",
   "Create your first administrator account to manage your application.": "اولین حساب مدیر را برای مدیریت برنامه خود ایجاد کنید.",
+  "Created At": "Created At",
   "Current Password": "رمز عبور فعلی",
   "Current password is incorrect": "Current password is incorrect",
   "D1 Database Connection": "اتصال پایگاه داده D1",
@@ -53,6 +61,8 @@
   "Database connection is working.": "اتصال پایگاه داده کار می‌کند.",
   "Date:": "تاریخ:",
   "Description": "توضیحات",
+  "Draft": "Draft",
+  "Edit": "Edit",
   "Edit This page": "ویرایش این صفحه",
   "English": "انگلیسی",
   "Enter Password": "رمز عبور را وارد کنید",
@@ -69,12 +79,15 @@
   "Failed to add role": "افزودن نقش با شکست مواجه شد",
   "Failed to add roles to user": "افزودن نقش‌ها به کاربر با شکست مواجه شد",
   "Failed to change password": "تغییر رمز عبور با شکست مواجه شد",
+  "Failed to load comments": "Failed to load comments",
   "Failed to post comment": "ارسال نظر با شکست مواجه شد",
   "Failed to retrieve the newly created user": "دریافت کاربر تازه ایجاد شده با شکست مواجه شد",
   "Failed to retrieve the newly created user.": "دریافت کاربر تازه ایجاد شده با شکست مواجه شد.",
+  "Failed to update comment status": "Failed to update comment status",
   "Failed to update the user profile": "Failed to update the user profile",
   "Finish Installing": "پایان نصب",
   "First Name": "نام",
+  "Forbidden: You do not have permission to edit comments.": "Forbidden: You do not have permission to edit comments.",
   "Forbidden: You do not have permission to post comments.": "دسترسی غیرمجاز: شما اجازه ارسال نظر را ندارید.",
   "Heading 1": "عنوان ۱",
   "Heading 2": "عنوان ۲",
@@ -90,6 +103,7 @@
   "Internal Server Error": "خطای داخلی سرور",
   "Internal Server Error. Please try again later.": "خطای داخلی سرور. لطفاً بعداً دوباره امتحان کنید.",
   "Internal Server Error. Please try again.": "Internal Server Error. Please try again.",
+  "Invalid status value.": "Invalid status value.",
   "Invalid username or password": "نام کاربری یا رمز عبور نامعتبر است",
   "It looks like your database schema has not been set up yet. Click the button below to run the required migrations and initialize your database schema.": "به نظر می‌رسد طرح پایگاه داده شما هنوز راه‌اندازی نشده است. برای اجرای مهاجرت‌های لازم و راه‌اندازی طرح پایگاه داده، روی دکمه زیر کلیک کنید.",
   "Italic": "ایتالیک",
@@ -109,9 +123,11 @@
   "Manage Users": "مدیریت کاربران",
   "Missing required fields: firstName, lastName, about, userName, password, or pub": "فیلدهای ضروری: firstName، lastName، about، userName، password یا pub وارد نشده‌اند",
   "Missing required fields: firstName, lastName, or about": "Missing required fields: firstName, lastName, or about",
+  "Missing required fields: id or newStatus": "Missing required fields: id or newStatus",
   "Missing required fields: oldPassword or newPassword": "Missing required fields: oldPassword or newPassword",
   "Missing required fields: routePath and commentBody are required.": "فیلدهای ضروری: مسیر و متن نظر الزامی هستند.",
   "Missing required fields: userName, password, pub": "فیلدهای ضروری: userName، password و pub وارد نشده‌اند",
+  "Missing required parameter: path": "Missing required parameter: path",
   "Must be at least 2 characters": "باید حداقل 2 کاراکتر باشد",
   "Must be at least 3 characters": "باید حداقل 3 کاراکتر باشد",
   "New Password": "رمز عبور جدید",
@@ -139,6 +155,7 @@
   "Proceed to Defaults app Database": "ادامه به پایگاه داده پیش‌فرض برنامه",
   "Profile": "پروفایل",
   "Profile updated successfully": "Profile updated successfully",
+  "Published": "Published",
   "Register": "ثبت‌نام",
   "Register User": "Register User",
   "Registered successfully": "ثبت‌نام با موفقیت انجام شد",
@@ -149,6 +166,7 @@
   "Role name is already taken. Please choose another one.": "نام نقش قبلاً انتخاب شده است. لطفاً نام دیگری انتخاب کنید.",
   "Roles": "نقش‌ها",
   "Roles added successfully": "نقش‌ها با موفقیت افزوده شدند",
+  "Route": "Route",
   "Run Migrations": "اجرای مهاجرت‌ها",
   "Running Migrations": "در حال اجرای مهاجرت‌ها",
   "Save": "ذخیره",
@@ -156,8 +174,10 @@
   "Send Comment": "ارسال نظر",
   "Settings": "تنظیمات",
   "Show password": "نمایش رمز عبور",
+  "Spam": "Spam",
   "Start Installation": "شروع نصب",
   "Stats": "آمار",
+  "Status": "Status",
   "Strikethrough": "خط میانی",
   "Success": "موفقیت‌آمیز",
   "The Admin role is not configured in the system.": "نقش ادمین در سیستم پیکربندی نشده است.",
@@ -170,10 +190,13 @@
   "UAvatar": "آواتار U",
   "UBadge": "نشان U",
   "UButton": "دکمه U",
+  "UButtonGroup": "UButtonGroup",
   "UDropdownMenu": "منوی کشویی U",
   "UPagination": "صفحه‌بندی U",
+  "USeparator": "USeparator",
   "UTable": "جدول U",
   "Unauthorized: User not authenticated": "Unauthorized: User not authenticated",
+  "Unknown": "Unknown",
   "Update Profile": "به‌روزرسانی پروفایل",
   "User logged in successfully": "کاربر با موفقیت وارد شد",
   "User not found": "User not found",
