going to headless

--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -25,6 +25,7 @@
   "Automatic migration failed.": "Automatic migration failed.",
   "Blockquote": "Blockquote",
   "Bold": "Bold",
+  "Build Name": "Build Name",
   "Builds": "Builds",
   "Bullet List": "Bullet List",
   "Category:": "Category:",
@@ -38,6 +39,9 @@
   "Comment status updated successfully": "Comment status updated successfully",
   "Comment status updated successfully.": "Comment status updated successfully.",
   "Comments": "Comments",
+  "Commit created successfully": "Commit created successfully",
+  "Commit updated successfully": "Commit updated successfully",
+  "Commits": "Commits",
   "Confirm Password": "Confirm Password",
   "Confirm Password must be at least 6 characters": "Confirm Password must be at least 6 characters",
   "Confirm password": "Confirm password",
@@ -79,6 +83,9 @@
   "Failed to add role": "Failed to add role",
   "Failed to add roles to user": "Failed to add roles to user",
   "Failed to change password": "Failed to change password",
+  "Failed to create a new build": "Failed to create a new build",
+  "Failed to create commit": "Failed to create commit",
+  "Failed to load builds": "Failed to load builds",
   "Failed to load comments": "Failed to load comments",
   "Failed to post comment": "Failed to post comment",
   "Failed to retrieve the newly created user": "Failed to retrieve the newly created user",
@@ -87,7 +94,9 @@
   "Failed to update the user profile": "Failed to update the user profile",
   "Finish Installing": "Finish Installing",
   "First Name": "First Name",
+  "Forbidden: You do not have permission to create commits.": "Forbidden: You do not have permission to create commits.",
   "Forbidden: You do not have permission to edit comments.": "Forbidden: You do not have permission to edit comments.",
+  "Forbidden: You do not have permission to get builds.": "Forbidden: You do not have permission to get builds.",
   "Forbidden: You do not have permission to post comments.": "Forbidden: You do not have permission to post comments.",
   "Heading 1": "Heading 1",
   "Heading 2": "Heading 2",
@@ -118,6 +127,7 @@
   "Login failed": "Login failed",
   "Login successful": "Login successful",
   "Mamoochi Database  Installation": "Mamoochi Database  Installation",
+  "Manage Builds": "Manage Builds",
   "Manage Comments": "Manage Comments",
   "Manage Roles": "Manage Roles",
   "Manage Users": "Manage Users",
@@ -132,6 +142,7 @@
   "Must be at least 3 characters": "Must be at least 3 characters",
   "New Password": "New Password",
   "No Database Connection": "No Database Connection",
+  "No commits found.": "No commits found.",
   "No results found": "No results found",
   "Note Section": "Note Section",
   "Noting is Here :(": "Noting is Here :(",
@@ -195,6 +206,7 @@
   "UPagination": "UPagination",
   "USeparator": "USeparator",
   "UTable": "UTable",
+  "Unauthorized": "Unauthorized",
   "Unauthorized: User not authenticated": "Unauthorized: User not authenticated",
   "Unknown": "Unknown",
   "Update Profile": "Update Profile",
