--- a/i18n/locales/fa.json
+++ b/i18n/locales/fa.json
@@ -25,6 +25,7 @@
   "Automatic migration failed.": "مهاجرت خودکار با شکست مواجه شد.",
   "Blockquote": "نقل قول",
   "Bold": "پررنگ",
+  "Build Name": "Build Name",
   "Builds": "ساخت‌ها",
   "Bullet List": "لیست گلوله‌ای",
   "Category:": "دسته‌بندی:",
@@ -38,6 +39,9 @@
   "Comment status updated successfully": "وضعیت نظر با موفقیت به‌روزرسانی شد",
   "Comment status updated successfully.": "وضعیت نظر با موفقیت به‌روزرسانی شد.",
   "Comments": "نظرات",
+  "Commit created successfully": "Commit created successfully",
+  "Commit updated successfully": "Commit updated successfully",
+  "Commits": "Commits",
   "Confirm Password": "تأیید رمز عبور",
   "Confirm Password must be at least 6 characters": "رمز عبور تأیید شده باید حداقل ۶ کاراکتر باشد",
   "Confirm password": "تأیید رمز عبور",
@@ -79,6 +83,9 @@
   "Failed to add role": "افزودن نقش با شکست مواجه شد",
   "Failed to add roles to user": "افزودن نقش‌ها به کاربر با شکست مواجه شد",
   "Failed to change password": "تغییر رمز عبور با شکست مواجه شد",
+  "Failed to create a new build": "Failed to create a new build",
+  "Failed to create commit": "Failed to create commit",
+  "Failed to load builds": "Failed to load builds",
   "Failed to load comments": "بارگذاری نظرات با شکست مواجه شد",
   "Failed to post comment": "ارسال نظر با شکست مواجه شد",
   "Failed to retrieve the newly created user": "دریافت کاربر تازه ایجاد شده با شکست مواجه شد",
@@ -87,7 +94,9 @@
   "Failed to update the user profile": "به‌روزرسانی پروفایل کاربر با شکست مواجه شد",
   "Finish Installing": "پایان نصب",
   "First Name": "نام",
+  "Forbidden: You do not have permission to create commits.": "Forbidden: You do not have permission to create commits.",
   "Forbidden: You do not have permission to edit comments.": "دسترسی غیرمجاز: شما اجازه ویرایش نظرات را ندارید.",
+  "Forbidden: You do not have permission to get builds.": "Forbidden: You do not have permission to get builds.",
   "Forbidden: You do not have permission to post comments.": "دسترسی غیرمجاز: شما اجازه ارسال نظر را ندارید.",
   "Heading 1": "عنوان ۱",
   "Heading 2": "عنوان ۲",
@@ -118,6 +127,7 @@
   "Login failed": "ورود ناموفق بود",
   "Login successful": "ورود موفقیت‌آمیز بود",
   "Mamoochi Database  Installation": "نصب پایگاه داده مَموچی",
+  "Manage Builds": "Manage Builds",
   "Manage Comments": "مدیریت نظرات",
   "Manage Roles": "مدیریت نقش‌ها",
   "Manage Users": "مدیریت کاربران",
@@ -132,6 +142,7 @@
   "Must be at least 3 characters": "باید حداقل 3 کاراکتر باشد",
   "New Password": "رمز عبور جدید",
   "No Database Connection": "اتصال پایگاه داده وجود ندارد",
+  "No commits found.": "No commits found.",
   "No results found": "نتیجه‌ای یافت نشد",
   "Note Section": "بخش یادداشت",
   "Noting is Here :(": "چیزی اینجا وجود ندارد :(",
@@ -195,6 +206,7 @@
   "UPagination": "صفحه‌بندی U",
   "USeparator": "جداکننده U",
   "UTable": "جدول U",
+  "Unauthorized": "Unauthorized",
   "Unauthorized: User not authenticated": "دسترسی غیرمجاز: کاربر احراز هویت نشده است",
   "Unknown": "ناشناخته",
   "Update Profile": "به‌روزرسانی پروفایل",
