basic headless flow

--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -26,6 +26,10 @@
   "Blockquote": "Blockquote",
   "Bold": "Bold",
   "Build Name": "Build Name",
+  "Build committed and pushed successfully": "Build committed and pushed successfully",
+  "Build failed": "Build failed",
+  "Build not found": "Build not found",
+  "Build pushed successfully": "Build pushed successfully",
   "Builds": "Builds",
   "Bullet List": "Bullet List",
   "Category:": "Category:",
@@ -98,6 +102,7 @@
   "Forbidden: You do not have permission to edit comments.": "Forbidden: You do not have permission to edit comments.",
   "Forbidden: You do not have permission to get builds.": "Forbidden: You do not have permission to get builds.",
   "Forbidden: You do not have permission to post comments.": "Forbidden: You do not have permission to post comments.",
+  "GitHub credentials are missing": "GitHub credentials are missing",
   "Heading 1": "Heading 1",
   "Heading 2": "Heading 2",
   "Heading 3": "Heading 3",
@@ -131,6 +136,7 @@
   "Manage Comments": "Manage Comments",
   "Manage Roles": "Manage Roles",
   "Manage Users": "Manage Users",
+  "Missing buildId in request body": "Missing buildId in request body",
   "Missing required fields: firstName, lastName, about, userName, password, or pub": "Missing required fields: firstName, lastName, about, userName, password, or pub",
   "Missing required fields: firstName, lastName, or about": "Missing required fields: firstName, lastName, or about",
   "Missing required fields: id or newStatus": "Missing required fields: id or newStatus",
@@ -142,8 +148,10 @@
   "Must be at least 3 characters": "Must be at least 3 characters",
   "New Password": "New Password",
   "No Database Connection": "No Database Connection",
+  "No commits found for this build": "No commits found for this build",
   "No commits found.": "No commits found.",
   "No results found": "No results found",
+  "No valid file changes found for this build": "No valid file changes found for this build",
   "Note Section": "Note Section",
   "Noting is Here :(": "Noting is Here :(",
   "Ordered List": "Ordered List",
@@ -209,6 +217,7 @@
   "Unauthorized": "Unauthorized",
   "Unauthorized: User not authenticated": "Unauthorized: User not authenticated",
   "Unknown": "Unknown",
+  "Update CDN": "Update CDN",
   "Update Profile": "Update Profile",
   "User logged in successfully": "User logged in successfully",
   "User not found": "User not found",
@@ -247,6 +256,7 @@
   "div": "div",
   "draft": "draft",
   "email": "Email",
+  "finish": "finish",
   "firstName": "First Name",
   "ip_address": "ip_address",
   "lastName": "Last Name",
