--- a/i18n/locales/fa.json
+++ b/i18n/locales/fa.json
@@ -26,6 +26,10 @@
   "Blockquote": "نقل قول",
   "Bold": "پررنگ",
   "Build Name": "Build Name",
+  "Build committed and pushed successfully": "Build committed and pushed successfully",
+  "Build failed": "Build failed",
+  "Build not found": "Build not found",
+  "Build pushed successfully": "Build pushed successfully",
   "Builds": "ساخت‌ها",
   "Bullet List": "لیست گلوله‌ای",
   "Category:": "دسته‌بندی:",
@@ -98,6 +102,7 @@
   "Forbidden: You do not have permission to edit comments.": "دسترسی غیرمجاز: شما اجازه ویرایش نظرات را ندارید.",
   "Forbidden: You do not have permission to get builds.": "Forbidden: You do not have permission to get builds.",
   "Forbidden: You do not have permission to post comments.": "دسترسی غیرمجاز: شما اجازه ارسال نظر را ندارید.",
+  "GitHub credentials are missing": "GitHub credentials are missing",
   "Heading 1": "عنوان ۱",
   "Heading 2": "عنوان ۲",
   "Heading 3": "عنوان ۳",
@@ -131,6 +136,7 @@
   "Manage Comments": "مدیریت نظرات",
   "Manage Roles": "مدیریت نقش‌ها",
   "Manage Users": "مدیریت کاربران",
+  "Missing buildId in request body": "Missing buildId in request body",
   "Missing required fields: firstName, lastName, about, userName, password, or pub": "فیلدهای ضروری: firstName، lastName، about، userName، password یا pub وارد نشده‌اند",
   "Missing required fields: firstName, lastName, or about": "فیلدهای ضروری: firstName، lastName یا about وارد نشده‌اند",
   "Missing required fields: id or newStatus": "فیلدهای ضروری: id یا newStatus وارد نشده‌اند",
@@ -142,8 +148,10 @@
   "Must be at least 3 characters": "باید حداقل 3 کاراکتر باشد",
   "New Password": "رمز عبور جدید",
   "No Database Connection": "اتصال پایگاه داده وجود ندارد",
+  "No commits found for this build": "No commits found for this build",
   "No commits found.": "No commits found.",
   "No results found": "نتیجه‌ای یافت نشد",
+  "No valid file changes found for this build": "No valid file changes found for this build",
   "Note Section": "بخش یادداشت",
   "Noting is Here :(": "چیزی اینجا وجود ندارد :(",
   "Ordered List": "لیست شماره‌دار",
@@ -209,6 +217,7 @@
   "Unauthorized": "Unauthorized",
   "Unauthorized: User not authenticated": "دسترسی غیرمجاز: کاربر احراز هویت نشده است",
   "Unknown": "ناشناخته",
+  "Update CDN": "Update CDN",
   "Update Profile": "به‌روزرسانی پروفایل",
   "User logged in successfully": "کاربر با موفقیت وارد شد",
   "User not found": "کاربر یافت نشد",
@@ -247,6 +256,7 @@
   "div": "div",
   "draft": "پیش‌نویس",
   "email": "ایمیل",
+  "finish": "finish",
   "firstName": "نام",
   "ip_address": "آدرس IP",
   "lastName": "نام خانوادگی",
