basic tip tap drager

--- a/i18n/locales/fa.json
+++ b/i18n/locales/fa.json
@@ -103,9 +103,9 @@
   "Forbidden: You do not have permission to get builds.": "Forbidden: You do not have permission to get builds.",
   "Forbidden: You do not have permission to post comments.": "دسترسی غیرمجاز: شما اجازه ارسال نظر را ندارید.",
   "GitHub credentials are missing": "GitHub credentials are missing",
-  "Heading 1": "عنوان ۱",
-  "Heading 2": "عنوان ۲",
-  "Heading 3": "عنوان ۳",
+  "Heading 1": "Heading 1",
+  "Heading 2": "Heading 2",
+  "Heading 3": "Heading 3",
   "Hide password": "پنهان کردن رمز عبور",
   "Home": "خانه",
   "Horizontal Line": "خط افقی",
@@ -197,7 +197,7 @@
   "Start Installation": "شروع نصب",
   "Stats": "آمار",
   "Status": "وضعیت",
-  "Strikethrough": "خط میانی",
+  "Strikethrough": "Strikethrough",
   "Success": "موفقیت‌آمیز",
   "The Admin role is not configured in the system.": "نقش ادمین در سیستم پیکربندی نشده است.",
   "The database schema has not been initialized. Please check your wrangler.toml configuration, ensure that migrations have been applied, and then refresh this page.": "طرح پایگاه داده راه‌اندازی نشده است. لطفاً تنظیمات فایل wrangler.toml خود را بررسی کنید، مطمئن شوید که مهاجرت‌ها اعمال شده‌اند، و سپس این صفحه را تازه کنید.",
@@ -247,7 +247,6 @@
   "body": "متن",
   "books": "کتاب‌ها",
   "build_name": "build_name",
-  "cccc": "cccc",
   "close-modal": "بستن پنجره",
   "commentPosted": "نظر ارسال شد",
   "description": "توضیحات",
