--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -1,7 +1,9 @@
 {
   "$ Cost": "$ Cost",
   ".not-draggable": ".not-draggable",
+  "404 - Page Not Found": "404 - Page Not Found",
   "About": "About",
+  "About must not be empty": "About must not be empty",
   "Actions": "Actions",
   "Add New Role": "Add New Role",
   "Add New User": "Add New User",
@@ -36,6 +38,8 @@
   "Change Password": "Change Password",
   "Code": "Code",
   "Comment": "Comment",
+  "Comment ID must be a positive integer": "Comment ID must be a positive integer",
+  "Comment body must not be empty": "Comment body must not be empty",
   "Comment must be at least 5 characters": "Comment must be at least 5 characters",
   "Comment not found.": "Comment not found.",
   "Comment posted successfully": "Comment posted successfully",
@@ -49,15 +53,15 @@
   "Confirm Password": "Confirm Password",
   "Confirm Password must be at least 6 characters": "Confirm Password must be at least 6 characters",
   "Confirm password": "Confirm password",
-  "Contact": "Contact",
   "Content Toc": "Content Toc",
+  "Content must not be empty": "Content must not be empty",
   "Content saved successfully": "Content saved successfully",
   "Create your first administrator account to manage your application.": "Create your first administrator account to manage your application.",
   "Created At": "Created At",
   "Current Password": "Current Password",
   "Current password is incorrect": "Current password is incorrect",
+  "Current password must not be empty": "Current password must not be empty",
   "D1 Database Connection": "D1 Database Connection",
-  "Dark Mode": "Dark Mode",
   "Dashboard": "Dashboard",
   "Database Connection Established": "Database Connection Established",
   "Database Ready": "Database Ready",
@@ -69,9 +73,9 @@
   "Database connection is working.": "Database connection is working.",
   "Date:": "Date:",
   "Description": "Description",
+  "Description must not exceed 1000 characters": "Description must not exceed 1000 characters",
   "Draft": "Draft",
   "Edit": "Edit",
-  "Edit This page": "Edit This page",
   "English": "English",
   "Enter Password": "Enter Password",
   "Enter and verify your D1 Database connection details to begin the installation process.": "Enter and verify your D1 Database connection details to begin the installation process.",
@@ -98,6 +102,7 @@
   "Failed to update the user profile": "Failed to update the user profile",
   "Finish Installing": "Finish Installing",
   "First Name": "First Name",
+  "First name must not be empty": "First name must not be empty",
   "Forbidden: You do not have permission to create commits.": "Forbidden: You do not have permission to create commits.",
   "Forbidden: You do not have permission to edit comments.": "Forbidden: You do not have permission to edit comments.",
   "Forbidden: You do not have permission to get builds.": "Forbidden: You do not have permission to get builds.",
@@ -117,15 +122,17 @@
   "Internal Server Error": "Internal Server Error",
   "Internal Server Error. Please try again later.": "Internal Server Error. Please try again later.",
   "Internal Server Error. Please try again.": "Internal Server Error. Please try again.",
+  "Invalid page parameter: must be a number >= 1": "Invalid page parameter: must be a number >= 1",
+  "Invalid pageSize parameter: must be a number between 1 and 100": "Invalid pageSize parameter: must be a number between 1 and 100",
   "Invalid status value.": "Invalid status value.",
   "Invalid username or password": "Invalid username or password",
   "It looks like your database schema has not been set up yet. Click the button below to run the required migrations and initialize your database schema.": "It looks like your database schema has not been set up yet. Click the button below to run the required migrations and initialize your database schema.",
   "Italic": "Italic",
   "Items": "Items",
   "Last Name": "Last Name",
+  "Last name must not be empty": "Last name must not be empty",
   "Latest ": "Latest ",
   "Latest Incoming": "Latest Incoming",
-  "Light Mode": "Light Mode",
   "Load Default Data": "Load Default Data",
   "Login": "Login",
   "Login User": "Login User",
@@ -136,60 +143,62 @@
   "Manage Comments": "Manage Comments",
   "Manage Roles": "Manage Roles",
   "Manage Users": "Manage Users",
-  "Missing buildId in request body": "Missing buildId in request body",
-  "Missing required fields: firstName, lastName, about, userName, password, or pub": "Missing required fields: firstName, lastName, about, userName, password, or pub",
-  "Missing required fields: firstName, lastName, or about": "Missing required fields: firstName, lastName, or about",
-  "Missing required fields: id or newStatus": "Missing required fields: id or newStatus",
-  "Missing required fields: oldPassword or newPassword": "Missing required fields: oldPassword or newPassword",
-  "Missing required fields: routePath and commentBody are required.": "Missing required fields: routePath and commentBody are required.",
-  "Missing required fields: userName, password, pub": "Missing required fields: userName, password, pub",
-  "Missing required parameter: path": "Missing required parameter: path",
+  "Missing or invalid path parameter": "Missing or invalid path parameter",
   "Must be at least 2 characters": "Must be at least 2 characters",
   "Must be at least 3 characters": "Must be at least 3 characters",
   "New Password": "New Password",
+  "New password must not be empty": "New password must not be empty",
   "No Database Connection": "No Database Connection",
   "No commits found for this build": "No commits found for this build",
   "No commits found.": "No commits found.",
-  "No results found": "No results found",
   "No valid file changes found for this build": "No valid file changes found for this build",
-  "Note Section": "Note Section",
   "Noting is Here :(": "Noting is Here :(",
   "Ordered List": "Ordered List",
-  "Page": "Page",
-  "Pages Section": "Pages Section",
+  "Page Not Found": "Page Not Found",
+  "Page must be at least 1": "Page must be at least 1",
+  "Page size must be at least 1": "Page size must be at least 1",
   "Paragraph": "Paragraph",
+  "Parent comment ID must be a positive integer": "Parent comment ID must be a positive integer",
   "Password": "Password",
   "Password changed successfully": "Password changed successfully",
   "Password must be at least 6 characters": "Password must be at least 6 characters",
+  "Password must not be empty": "Password must not be empty",
   "Passwords do not match": "Passwords do not match",
+  "Path must not be empty": "Path must not be empty",
   "Permission Denied": "Permission Denied",
+  "Permission must not be empty": "Permission must not be empty",
   "Permissions": "Permissions",
-  "Persian": "Persian",
+  "Persian": "فارسی",
   "Personal Details": "Personal Details",
+  "Please check the URL or return to the homepage.": "Please check the URL or return to the homepage.",
   "Please provide a role name, a description, and select the appropriate permissions.": "Please provide a role name, a description, and select the appropriate permissions.",
-  "Please provide firstName, lastName, about, userName, password, and pub.": "Please provide firstName, lastName, about, userName, password, and pub.",
   "Please wait while we apply the necessary database migrations...": "Please wait while we apply the necessary database migrations...",
   "Preparing Database": "Preparing Database",
   "Previous": "Previous",
   "Proceed to Defaults app Database": "Proceed to Defaults app Database",
-  "Profile": "Profile",
   "Profile updated successfully": "Profile updated successfully",
+  "Public key must not be empty": "Public key must not be empty",
   "Published": "Published",
   "Register": "Register",
   "Register User": "Register User",
   "Registered successfully": "Registered successfully",
   "Reply": "Reply",
+  "Reset Token Template": "Reset Token Template",
+  "Reset from handler": "Reset from handler",
   "Return to Homepage": "Return to Homepage",
+  "Role ID must be a valid number": "Role ID must be a valid number",
   "Role Name": "Role Name",
   "Role added successfully": "Role added successfully",
   "Role name is already taken. Please choose another one.": "Role name is already taken. Please choose another one.",
+  "Role name must be at least 3 characters": "Role name must be at least 3 characters",
+  "Role name must not exceed 255 characters": "Role name must not exceed 255 characters",
   "Roles": "Roles",
   "Roles added successfully": "Roles added successfully",
   "Route": "Route",
+  "Route path must not be empty": "Route path must not be empty",
   "Run Migrations": "Run Migrations",
   "Running Migrations": "Running Migrations",
   "Save": "Save",
-  "Search": "Search",
   "Send Comment": "Send Comment",
   "Settings": "Settings",
   "Show password": "Show password",
@@ -203,9 +212,9 @@
   "The database schema has not been initialized. Please check your wrangler.toml configuration, ensure that migrations have been applied, and then refresh this page.": "The database schema has not been initialized. Please check your wrangler.toml configuration, ensure that migrations have been applied, and then refresh this page.",
   "The default admin role is already configured.": "The default admin role is already configured.",
   "The default admin role was created successfully.": "The default admin role was created successfully.",
+  "The page you are looking for doesn’t exist or has been moved.": "The page you are looking for doesn’t exist or has been moved.",
   "This username is already in use. Please choose another.": "This username is already in use. Please choose another.",
   "Type Something...": "Type Something...",
-  "Type to Search...": "Type to Search...",
   "UAvatar": "UAvatar",
   "UBadge": "UBadge",
   "UButton": "UButton",
@@ -219,12 +228,16 @@
   "Unknown": "Unknown",
   "Update CDN": "Update CDN",
   "Update Profile": "Update Profile",
+  "User ID must be a positive integer": "User ID must be a positive integer",
+  "User ID must be an integer": "User ID must be an integer",
   "User logged in successfully": "User logged in successfully",
   "User not found": "User not found",
   "User registered successfully": "User registered successfully",
   "Username": "Username",
   "Username is already taken. Please choose another one.": "Username is already taken. Please choose another one.",
+  "Username must not be empty": "Username must not be empty",
   "Users": "Users",
+  "Verify Yourself": "Verify Yourself",
   "Visitors": "Visitors",
   "Visual": "Visual",
   "We are setting up the necessary configurations. This may take a moment...": "We are setting up the necessary configurations. This may take a moment...",
@@ -245,7 +258,8 @@
   "about": "About",
   "avatar": "Avatar",
   "body": "body",
-  "books": "books",
+  "buildId must be a positive integer": "buildId must be a positive integer",
+  "buildId must be an integer": "buildId must be an integer",
   "build_name": "build_name",
   "close-modal": "close-modal",
   "commentPosted": "commentPosted",
@@ -259,6 +273,7 @@
   "firstName": "First Name",
   "ip_address": "ip_address",
   "lastName": "Last Name",
+  "library": "library",
   "logs": "logs",
   "message": "message",
   "more": "more",
@@ -273,6 +288,7 @@
   "route_path": "route_path",
   "status": "status",
   "title": "title",
+  "tuts": "tuts",
   "type": "type",
   "user_agent": "user_agent",
   "username": "username",
